post search & a lot of other fixes
